// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default onset picker with specified onset date 1`] = `
<div
  data-terra-clinical-onset-picker="true"
>
  <fieldset
    class="fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline"
      >
        <select
          class="select"
          name="test-precision"
        >
          <option
            selected=""
            value="on/at"
          >
            On/At
          </option>
          <option
            value="about"
          >
            About
          </option>
          <option
            value="before"
          >
            Before
          </option>
          <option
            value="after"
          >
            After
          </option>
          <option
            value="unknown"
          >
            Unknown
          </option>
        </select>
      </div>
      <div
        class="field field-inline"
      >
        <select
          class="select"
          name="test-granularity"
        >
          <option
            value="AGE"
          >
            Age
          </option>
          <option
            value="YEAR"
          >
            Year
          </option>
          <option
            selected=""
            value="MONTH"
          >
            Month
          </option>
          <option
            value="DATE"
          >
            Date
          </option>
        </select>
      </div>
    </div>
  </fieldset>
  <fieldset
    class="fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline"
        data-terra-clinical-onset-picker="month"
      >
        <select
          class="select"
        >
          <option
            value="0"
          >
            January
          </option>
          <option
            value="1"
          >
            February
          </option>
          <option
            value="2"
          >
            March
          </option>
          <option
            value="3"
          >
            April
          </option>
          <option
            value="4"
          >
            May
          </option>
          <option
            value="5"
          >
            June
          </option>
          <option
            value="6"
          >
            July
          </option>
          <option
            value="7"
          >
            August
          </option>
          <option
            selected=""
            value="8"
          >
            September
          </option>
          <option
            value="9"
          >
            October
          </option>
        </select>
      </div>
      <div
        class="field field-inline"
        data-terra-clinical-onset-picker="year"
      >
        <select
          class="select"
        >
          <option
            value="2011"
          >
            2011
          </option>
          <option
            value="2012"
          >
            2012
          </option>
          <option
            value="2013"
          >
            2013
          </option>
          <option
            value="2014"
          >
            2014
          </option>
          <option
            value="2015"
          >
            2015
          </option>
          <option
            value="2016"
          >
            2016
          </option>
          <option
            selected=""
            value="2017"
          >
            2017
          </option>
        </select>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`should render as controlled when onChange functions are supplied 1`] = `
<div
  data-terra-clinical-onset-picker="true"
>
  <fieldset
    class="fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline"
      >
        <select
          class="select"
          name="test-precision"
        >
          <option
            selected=""
            value="on/at"
          >
            On/At
          </option>
          <option
            value="about"
          >
            About
          </option>
          <option
            value="before"
          >
            Before
          </option>
          <option
            value="after"
          >
            After
          </option>
          <option
            value="unknown"
          >
            Unknown
          </option>
        </select>
      </div>
      <div
        class="field field-inline"
      >
        <select
          class="select"
          name="test-granularity"
        >
          <option
            value="AGE"
          >
            Age
          </option>
          <option
            value="YEAR"
          >
            Year
          </option>
          <option
            selected=""
            value="MONTH"
          >
            Month
          </option>
          <option
            value="DATE"
          >
            Date
          </option>
        </select>
      </div>
    </div>
  </fieldset>
  <fieldset
    class="fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline"
        data-terra-clinical-onset-picker="month"
      >
        <select
          class="select"
        >
          <option
            value="0"
          >
            January
          </option>
          <option
            value="1"
          >
            February
          </option>
          <option
            value="2"
          >
            March
          </option>
          <option
            value="3"
          >
            April
          </option>
          <option
            value="4"
          >
            May
          </option>
          <option
            value="5"
          >
            June
          </option>
          <option
            value="6"
          >
            July
          </option>
          <option
            value="7"
          >
            August
          </option>
          <option
            value="8"
          >
            September
          </option>
          <option
            selected=""
            value="9"
          >
            October
          </option>
        </select>
      </div>
      <div
        class="field field-inline"
        data-terra-clinical-onset-picker="year"
      >
        <select
          class="select"
        >
          <option
            value="2011"
          >
            2011
          </option>
          <option
            value="2012"
          >
            2012
          </option>
          <option
            value="2013"
          >
            2013
          </option>
          <option
            value="2014"
          >
            2014
          </option>
          <option
            value="2015"
          >
            2015
          </option>
          <option
            value="2016"
          >
            2016
          </option>
          <option
            selected=""
            value="2017"
          >
            2017
          </option>
        </select>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`should render only a select when supplied with the UNKNOWN precision 1`] = `
<div
  data-terra-clinical-onset-picker="true"
>
  <fieldset
    class="fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline"
      >
        <select
          class="select"
          name="test-precision"
        >
          <option
            value="on/at"
          >
            On/At
          </option>
          <option
            value="about"
          >
            About
          </option>
          <option
            value="before"
          >
            Before
          </option>
          <option
            value="after"
          >
            After
          </option>
          <option
            selected=""
            value="unknown"
          >
            Unknown
          </option>
        </select>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`should render with non default inputs when supplied 1`] = `
<div
  data-terra-clinical-onset-picker="true"
>
  <fieldset
    class="fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline"
      >
        <select
          class="select"
          name="test-precision"
        >
          <option
            value="on/at"
          >
            On/At
          </option>
          <option
            value="about"
          >
            About
          </option>
          <option
            selected=""
            value="before"
          >
            Before
          </option>
          <option
            value="after"
          >
            After
          </option>
          <option
            value="unknown"
          >
            Unknown
          </option>
        </select>
      </div>
      <div
        class="field field-inline"
      >
        <select
          class="select"
          name="test-granularity"
        >
          <option
            value="AGE"
          >
            Age
          </option>
          <option
            selected=""
            value="YEAR"
          >
            Year
          </option>
          <option
            value="MONTH"
          >
            Month
          </option>
          <option
            value="DATE"
          >
            Date
          </option>
        </select>
      </div>
    </div>
  </fieldset>
  <fieldset
    class="fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline"
        data-terra-clinical-onset-picker="year"
      >
        <select
          class="select"
        >
          <option
            value="2011"
          >
            2011
          </option>
          <option
            value="2012"
          >
            2012
          </option>
          <option
            value="2013"
          >
            2013
          </option>
          <option
            selected=""
            value="2014"
          >
            2014
          </option>
          <option
            value="2015"
          >
            2015
          </option>
          <option
            value="2016"
          >
            2016
          </option>
          <option
            value="2017"
          >
            2017
          </option>
        </select>
      </div>
    </div>
  </fieldset>
</div>
`;
